--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "fluent-ffmpeg": "^2.1.3",
     "node-cron": "^3.0.3",
     "nodemon": "^3.1.7",
+    "puppeteer": "^23.10.1",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "react-helmet": "^6.1.0",
