--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "puppeteer": "^23.10.1",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "puppeteer-real-browser": "^1.3.20",
     "react-helmet": "^6.1.0",
     "remotion": "^4.0.236"
   }
